rework
- update interop integration
- retrieve and set contract template info
- retrieve and set role mapping